# itmo_mma

./: README.md  pyproject.toml
itmo_mma/: lab_1.ipynb  lab_4.ipynb
