[tool.poetry]
name = "itmo_mma"
version = "0.1.0"
description = ""
authors = ["dmitrij <dimaprusskii@mail.ru>"]

[tool.poetry.dependencies]
python = "~3.8.5"
numpy = "~1.19.2"
pandas = "~1.2.4"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
ipykernel = "^6.5.0"
statsmodels = "^0.13.0"
sklearn = "^0.0"
tqdm = "^4.62.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
